# glupload-rs-test

./: Cargo.toml  build.rs
src/: main.rs
